--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -5,7 +5,8 @@
 
         <div class='card'>
             <div class="card-header col-md-12">
-                <h3> Manifest M-<%=mid %> Data Entry</h3>
+                <h3> Manifest M-
+                    <%=mid %> Data Entry</h3>
             </div>
             <div class="card-body">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -30,9 +31,13 @@
                         <div>
                             <div class="clearfix">
                                 <div class="btn-group custom-btn-group float-right" role="group">
-
+                                    <%if(Number(manifest.StageId) <= 1 ){%>
                                     <button type="button" class="btn btn-primary btn-sm close-manifest">Close Manifest</button>
-                                    <button type="button" class="btn btn-success btn-sm ship-manifest">Ship Manifest</button>
+                                    <%}%>
+                                    <%if(Number(manifest.StageId) <= 2 ){%>
+                                    <button type="button" class="btn btn-success btn-sm ship-manifest-btn" data-toggle='modal'
+                                        data-target='#shipManifest'>Ship Manifest</button>
+                                    <%}%>
                                     <button type="button" class="btn btn-dark btn-sm export-manifest">Export Excel</button>
 
                                 </div>
@@ -41,21 +46,25 @@
                         <div class='row'>
 
                             <div class='col-md-3'>
-                                <form method='post'>
-
-
-                                    <div class='form-group'>
-                                        <label class=''>AWB#</label>
-                                        <input type='text' class='form-control ' name='awb' id='awb' placeholder="AWB" />
-                                    </div>
-                                    <div class='form-group'>
-                                        <button class='btn btn-primary save-manifest'><i class='fa fa-plus'></i> Save</button>
-
-                                    </div>
-                                </form>
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+													<p class="text-uppercase small">
+														<strong>Date:</strong> <br/><%=manifest.DateCreatedDisplay %>
+													</p>
+													<address class='small'>
+														
+														<strong>VALUE:</strong> $1,123.23<br>
+														<strong>WEIGHT:</strong> 1,123 Lbs<br>
+                                                        <strong>STAGE:</strong> Closed<br>
+                                                        
+                                                        <strong>CREATED BY:</strong> Stevan<br>
+													
+													</address>
+												</div>
+                              
                             </div>
                             <div class='col-md-9'>
                                 <div class='row gutters pt-2 mt-4'>
+
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                                         <div class="info-stats4">
                                             <div class="icon-type pull-left">
@@ -87,7 +96,9 @@
                     </div>
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
                         <div class='row'>
-                            <div class='col-md-3'>
+                            <%if (manifest.StageId <= 1){ %>
+                            <div class='col-md-3 pkg-form'>
+
                                 <form method='post' id='mailPackageForm'>
                                     <div class='form-group'>
                                         <label>Bag </label>
@@ -129,7 +140,9 @@
                                             Save</button>
                                     </div>
                                 </form>
+
                             </div>
+                            <%}%>
                             <div class='col-md-9'>
                                 <table id='mailTable' class='table table-bordered table-inverse ' style='width:100%;'>
 
@@ -140,7 +153,8 @@
                     </div>
                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab" aria-expanded="false">
                         <div class='row'>
-                            <div class='col-md-3'>
+                            <%if (manifest.StageId <= 1){ %>
+                            <div class='col-md-3 pkg-form'>
                                 <form method='post' id='cargoPackageForm'>
                                     <div class='form-group'>
                                         <label>Skid </label>
@@ -183,6 +197,7 @@
                                     </div>
                                 </form>
                             </div>
+                            <%}%>
                             <div class='col-md-9'>
                                 <table id='cargoTable' class='table table-bordered table-inverse ' style='width:100%'>
 
@@ -214,6 +229,32 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
                 <button type="button" class="btn btn-danger rm-package" id='rmPackage'>Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="shipManifest" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true"
+    style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel2">Ship Manifest</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+                <label>Enter AWB #</label>
+                <input type='text' class='form-control awb'>
+            </div>
+            <div class="modal-footer">
+
+
+                <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+
+                <button type="button" class="btn btn-success ship-manifest" id='ship-manifest'>Ship Manifest</button>
             </div>
         </div>
     </div>
