--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -30,18 +30,22 @@
             </a>
             <ul aria-expanded="false" class="collapse in">
                 <li>
-                    <a href='/warehouse/packages'>Add Packages</a>
+                    <a href='#' class="">(UM) Mail</a>
                 </li>
                 <li>
-                    <a href='/warehouse/list-manifest' class="">Manfiest</a>
+                    <a href='/warehouse/list-manifest' class="">Air Cargo</a>
                 </li>
                 <li>
-                    <a href='/warehouse/list-ocean' class="">Ocean</a>
+                    <a href='/warehouse/list-ocean' class="">Ocean Cargo</a>
                 </li>
-                <li>
+                <li class='pb-1' style='border-bottom:1px solid #e9ecef!important;'>
                     <a href='/warehouse/list-hazmat' class="">HAZMAT</a>
                 </li>
-                
+                <li class='mt-2'>
+                <a href='#' class="">Manifest Duties</a>
+            </li>
+
+
 
             </ul>
         </li>
