some previous changes

--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -41,8 +41,13 @@
                 <li>
                     <a href='/warehouse/list-hazmat' class="">HAZMAT</a>
                 </li>
+                <li>
+                    <a href='/warehouse/list-hazmat' class="">Confirmed Duties</a>
+                </li>
                 
-
+                <li>
+                    <a href='/warehouse/list-hazmat' class="">Trinidad Processing</a>
+                </li>
             </ul>
         </li>
 
