--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -41,22 +41,19 @@
                 <li class='pb-1' style='border-bottom:1px solid #e9ecef!important;'>
                     <a href='/warehouse/list-hazmat' class="">HAZMAT</a>
                 </li>
-<<<<<<< HEAD
                 <li>
-                    <a href='/warehouse/list-hazmat' class="">Confirmed Duties</a>
+                    <a href='#' class="">Confirmed Duties</a>
                 </li>
                 
                 <li>
-                    <a href='/warehouse/list-hazmat' class="">Trinidad Processing</a>
+                    <a href='#' class="">Trinidad Processing</a>
                 </li>
-=======
                 <li class='mt-2'>
                 <a href='#' class="">Manifest Duties</a>
             </li>
 
 
 
->>>>>>> dbefe124905757303de831ab8cd36cb1a953b09e
             </ul>
         </li>
 
