Updated the customers page

--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -17,6 +17,9 @@
                 <li>
                     <a href='/admin/users'>Users</a>
                 </li>
+                <li>
+                <a href='/admin/customers'>Customers</a>
+            </li>
 
             </ul>
         </li>
