--- a/views/pages/admin/customers.ejs
+++ b/views/pages/admin/customers.ejs
@@ -1,12 +1,33 @@
 <% layout('./shared/__template')%>
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="#"><i class="icon-home6"></i></a></li>
+        <li class="breadcrumb-item"><a href="#">Customers</a></li>
+        
+    </ol>
+</nav>
     <div class='gutters'>
         <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
             <div class="card">
                 <div class="card-header">Customers </div>
                 <div class="card-body">
-                <table id='customerTable' class='table table-bordered table-inverse ' style='width:100%'>
+                    <div class='row'>
+                        <div class='col-md-6  mr-0 pr-0'><input class="form-control form-control-sm " type="text" placeholder="search customers"></div>
+                        <div class='col-md-5 ml-0 pl-0'><button class='btn btn-primary btn-sm  '> <i class='icon-search'></i></button> </div>
+                        <div class='col-md-1 '></div>
+                    </div>
+                       
+                <table id='customerTable' class='table table-bordered table-inverse pt-2 mt-2' style='width:100%'>
 
                 </table>
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                  <% for(var i = pagerInfo.startPage; i <=pagerInfo.endPage; i++) { %>
+                    <li class="page-item"><a class="page-link" href="/admin/customers/<%=i%>">  <%= i %></a></li>
+                  <% } %>
+                    <li class="page-item"><a class="page-link" href="#">...</a></li>
+                    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                  </ul>
                 </div>
             </div>
         </div>
@@ -14,10 +35,9 @@
     
 
     <script>
-    var rpackages = <%-JSON.stringify(owners)%> ;
+    var rpackages = <%-JSON.stringify(records)%> ;
     </script>
     <% block('scripts').append('<script src="/vendor/datatables/dataTables.min.js"></script>')%>
     <% block('scripts').append('<script src="/vendor/datatables/dataTables.bootstrap.min.js"></script>')%>
-    
     <% block('scripts').append('<script src="/vendor/datatables/custom/fixedHeader.js"></script>')%>
     <% block('scripts').append('<script src="/js/customers.js"></script>')%>
