--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -23,6 +23,10 @@
                         <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
                             aria-selected="false" aria-expanded="false">Cargo</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="unproc-tab" data-toggle="tab" href="#unproc" role="tab" aria-controls="unproc"
+                            aria-selected="false" aria-expanded="false">Un-processed</a>
+                    </li>
 
                 </ul>
 
@@ -210,6 +214,47 @@
                             </div>
                         </div>
                     </div>
+                    <div class="tab-pane fade" id="unproc" role="tabpanel" aria-labelledby="unproc-tab" aria-expanded="false">
+                        <div class='row'>
+                           
+                            <div class='col-md-3 pkg-form' style='<%=showForm%>'>
+                                <form method='post' id='unprocPackageForm'>
+                                    
+                                    <div class='form-group'>
+                                        <label>SkyBox <span id='' class='text-info title customerName'></span></label>
+                                        <input type='text' class='form-control skybox' name='skybox' required />
+                                    </div>
+                                    <div class='form-group'>
+                                        <label>Tracking #</label>
+                                        <input type='hidden' class='mid' value='<%=mid %>' />
+                                        <input type='hidden' class='mtype' value='cargo' />
+                                        <input type='text' class='form-control trackingNo' name='trackingNo' required />
+                                    </div>
+                                   
+                                    <div class='form-group'>
+                                        <label>Value</label>
+                                        <input type='text' class='form-control package-value' name='value' required />
+                                    </div>
+                                   
+
+                                    <div class='form-group'>
+                                        <label>Weight</label>
+                                        <input type='text' class='form-control weight' name='weight' />
+                                    </div>
+                                    <div class='form-group'>
+                                        <button class='btn btn-primary savePackage' data-stage='<%=manifest.StageId%>' type='button'><i class='fa fa-plus'></i>
+                                            Save</button>
+                                    </div>
+                                </form>
+                            </div>
+                            
+                            <div class='col-md-9'>
+                                <table id='cargoTable' class='table table-bordered table-inverse ' style='width:100%'>
+
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -266,6 +311,5 @@
 </div>
 <% block('scripts').append('<script src="/vendor/datatables/dataTables.min.js"></script>')%>
 <% block('scripts').append('<script src="/vendor/datatables/dataTables.bootstrap.min.js"></script>')%>
-
 <% block('scripts').append('<script src="/vendor/datatables/custom/fixedHeader.js"></script>')%>
 <% block('scripts').append('<script src="/js/packages/manifest-package.js"></script>')%>
