--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -10,7 +10,7 @@
                     <%=mid %> Data Entry</h3>
             </div>
             <div class="card-body">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <ul class="nav 57 id="myTab" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
                             aria-controls="home" aria-selected="true" aria-expanded="true">Manifest Overview</a>
@@ -31,7 +31,7 @@
                 </ul>
 
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane active show" id="home" role="tabpanel" aria-labelledby="home-tab"
+                    <div class="tab-pane active fade show" id="home" role="tabpanel" aria-labelledby="home-tab"
                         aria-expanded="true">
                         <div>
                             <div class="clearfix">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
+                    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" aria-expanded="false">
                         <div class='row'>
 
                             <% var showForm ='' 
@@ -173,7 +173,7 @@
                         </div>
 
                     </div>
-                    <div class="tab-pane " id="contact" role="tabpanel" aria-labelledby="contact-tab" aria-expanded="false">
+                    <div class="tab-pane fade " id="contact" role="tabpanel" aria-labelledby="contact-tab" aria-expanded="false">
                         <div class='row'>
                            
                             <div class='col-md-3 pkg-form' style='<%=showForm%>'>
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane " id="unproc" role="tabpanel" aria-labelledby="unproc-tab" aria-expanded="false">
+                    <div class="tab-pane fade" id="unproc" role="tabpanel" aria-labelledby="unproc-tab" aria-expanded="false">
                         <div class='row'>
                            
                             <div class='col-md-3 pkg-form' style='<%=showForm%>'>
