--- a/views/pages/admin/customers.ejs
+++ b/views/pages/admin/customers.ejs
@@ -10,13 +10,15 @@
         <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12">
             <div class="card">
                 <div class="card-header">Customers </div>
-                <div class="card-body">
+                <div class="card-body"> <form method="POST">
                     <div class='row'>
-                        <div class='col-md-6  mr-0 pr-0'><input class="form-control form-control-sm " type="text" placeholder="search customers"></div>
-                        <div class='col-md-5 ml-0 pl-0'><button class='btn btn-primary btn-sm  '> <i class='icon-search'></i></button> </div>
-                        <div class='col-md-1 '></div>
-                    </div>
                        
+                        <div class='col-md-6  mr-0 pr-0'><input name='searchText' class="form-control form-control-sm " type="text" placeholder="search customers"></div>
+                        <div class='col-md-5 ml-0 pl-0'><button class='btn btn-primary btn-sm ' type="submit"> <i class='icon-search'></i></button> </div>
+                        <div class='col-md-1 '></div>
+                    
+                    </div>
+                       </form>
                 <table id='customerTable' class='table table-bordered table-inverse pt-2 mt-2' style='width:100%'>
 
                 </table>
