--- a/views/pages/admin/customerEdit.ejs
+++ b/views/pages/admin/customerEdit.ejs
@@ -1,13 +1,14 @@
 <% layout('./shared/__template')%>
-<form id="saveFrom" method='POST' action ='/admin/save-Customer/'>
+<form id="saveFrom" method='POST' action ='/admin/customer-edit/'>
 <div class="row gutters">
     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
         <div class="card">
-            <div class="card-header">Save User</div>
+            <div class="card-header">Save Customer</div>
             <div class="card-body">
                     <div class="form-group">
                             <label for="exOne">Skybox</label>
-                            <input type="text" class="form-control" name='username' id="username" placeholder="" required readonly value='<%=customer.SkyBox %>'>
+                            <input type="text" class="form-control" name='skybox' id="skybox" placeholder="" required readonly value='<%=customer.SkyBox %>'>
+                            <input type='hidden' value = '<%=customer.Id%>' name='id' id="id">
                         </div>
                         <div class="form-group">
                             <label for="exOne"> Name</label>
@@ -24,8 +25,28 @@
                     <input type="text" class="form-control" id="mobile" name='mobile' placeholder="(868)-xxx-xxxx" value='<%=customer.Mobile %>'>
                 </div>
                 <div class="form-group">
+                    <label for="exOne">Mobile</label>
+                    <select id="area" name="area" class=" form-control ">
+<% 
+
+%>
+                                <option value=""> Pick up Location </option>
+                                <option>Trincity</option>
+                                <option>Chaguanas</option>
+                                <option>Curepe</option>
+                                <option>Sangre Grande</option>
+                                <option>Port of Spain </option>
+                                <option>San Fernando</option>
+                                <option>Tobago</option>
+                            </select>
+                </div>
+                <div class="form-group">
                     <label for="exOne">Is Business </label>
-                    <input type="checkbox" class="form-control" id="isBusiness" name='isBusiness' style='width:40px;'>
+                    <% var isBusiness = ''; 
+                    if (customer.IsBusiness){
+                        isBusiness = 'checked'
+                    } %>
+                    <input type="checkbox" class="form-control" id="isBusiness" name='isBusiness' style='width:40px;' <%= isBusiness %> >
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button> <button type="button" class="btn btn-primary">Cancel</button>
                 
